[metadata]
name = watchdata
summary = Python Watchdata
description-file =
    README.rst
license = Apache License, Version 2.0
author = Shiliang.
author-email = shiliang@chinac.com
home-page = htts://launchpad.net/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    watchdata

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    watchdata = watchdata.opts:list_opts

console_scripts =
    watchdata = watchdata.cmd.run:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
cover-package = watchdata
cover-html = true
cover-erase = true
